--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -2,7 +2,8 @@ $white: #fff;
 $black: #000;
 $gold: #d4af37;
 $red: #f00;
+$gray: #ccc;
 $light_blue: #92b0b3;
-$light_gray: #c8dadf;
+$light_gray: #f2f2f2;
 $twitter_color: #1da1f2;
 $main_color: #968388;
