--- a/styles/common/mixin.scss
+++ b/styles/common/mixin.scss
@@ -1,18 +1,18 @@
 // 変数の定義
 // min-width
 $breakpoint-up: (
-  "sm": "screen and (min-width: 400px)",
-  "md": "screen and (min-width: 769px)",
-  "lg": "screen and (min-width: 1000px)",
-  "xl": "screen and (min-width: 1200px)",
+  'sm': 'screen and (min-width: 400px)',
+  'md': 'screen and (min-width: 768px)',
+  'lg': 'screen and (min-width: 1000px)',
+  'xl': 'screen and (min-width: 1200px)'
 ) !default;
 
 // max-width
 $breakpoint-down: (
-  "sm": "screen and (max-width: 399px)",
-  "md": "screen and (max-width: 768px)",
-  "lg": "screen and (max-width: 999px)",
-  "xl": "screen and (max-width: 1400px)",
+  'sm': 'screen and (max-width: 399px)',
+  'md': 'screen and (max-width: 768px)',
+  'lg': 'screen and (max-width: 999px)',
+  'xl': 'screen and (max-width: 1400px)'
 ) !default;
 
 // @mixinの定義
