--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -8,4 +8,10 @@
   &__small {
     font-size: 1rem;
   }
+  @include mq-down(md) {
+    padding: get_vw(10) 0;
+    &__small {
+      font-size: get_vw(10);
+    }
+  }
 }
