--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -1,45 +1,85 @@
 @import 'global';
 
-.wrap {
-  h2 {
-    font-size: 1.2rem;
-    padding: 0 10px;
+.search {
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  text-align: center;
+  min-height: 30px;
+  margin-top: 20px;
+  vertical-align: middle;
+  padding: 10px 0;
+  border-top: 1px solid $gray;
+  border-bottom: 1px solid $gray;
+  background: $white;
+  z-index: 10;
+  &__kakeru,
+  &__text,
+  &__kakeru,
+  &__select {
+    margin-right: 15px;
+  }
+  &__kakeru {
+    font-size: 1rem;
+  }
+  &__text,
+  select {
+    width: 200px;
+    height: 100%;
+    padding: 5px;
     box-sizing: border-box;
   }
-  .search {
-    text-align: center;
-    height: 30px;
-    margin-top: 20px;
-    vertical-align: middle;
-    padding: 10px 0;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    &__kakeru,
-    &__text,
-    &__kakeru,
-    &__select {
-      margin-right: 15px;
+  &__submit {
+    width: 50px;
+    height: 100%;
+    vertical-align: top;
+  }
+  @include mq-down(md) {
+    text-align: left;
+    padding: get_vw(15);
+    position: fixed;
+    top: get_vw(-101);
+    left: 0;
+    margin-top: 0;
+    border-bottom: get_vw(25) solid $black;
+    &::before {
+      content: '»';
+      font-size: get_vw(35);
+      text-align: center;
+      position: absolute;
+      right: 0;
+      left: get_vw(15);
+      bottom: get_vw(-30);
+      margin: auto;
+      transform: rotate(90deg);
+      color: $white;
     }
     &__kakeru {
-      font-size: 1rem;
+      display: none;
     }
     &__text,
     select {
-      width: 200px;
-      height: 100%;
-      padding: 5px;
-      box-sizing: border-box;
+      font-size: get_vw(14);
+      height: get_vw(30);
+      width: 80%;
+    }
+    select {
+      margin: get_vw(10) get_vw(10) 0 0;
     }
     &__submit {
-      width: 50px;
-      height: 100%;
-      vertical-align: top;
+      width: 15%;
+      font-size: get_vw(14);
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
     }
   }
 }
 
 .articles {
-  background: #f2f2f2;
+  background: $light_gray;
   display: flex;
   flex-wrap: wrap;
   padding: 25px 50px 0;
@@ -48,18 +88,28 @@
   &:last-of-type {
     padding-bottom: 25px;
   }
+
+  @include mq-down(md) {
+    padding: get_vw(10) get_vw(15) 0;
+
+    &:last-of-type {
+      padding-bottom: get_vw(10);
+    }
+  }
 }
 
 .article {
   display: block;
   width: calc(20% - 20px);
-  padding: 10px;
   margin: 10px;
   box-sizing: border-box;
   background: $white;
   border-radius: 5px;
   a {
+    display: block;
     color: inherit;
+    padding: 10px;
+    box-sizing: border-box;
     text-decoration: none;
     > *:first-child {
       display: flex;
@@ -76,5 +126,25 @@
     font-size: 1rem;
     line-height: 1.5;
     margin-top: 5px;
+  }
+  @include mq-down(xl) {
+    width: calc(25% - 20px);
+  }
+  @include mq-down(lg) {
+    width: calc(50% - 20px);
+  }
+  @include mq-down(md) {
+    width: 100%;
+    padding: get_vw(10);
+    margin: get_vw(15) get_vw(10) 0;
+    a {
+      > *:first-child {
+        min-height: get_vw(150);
+      }
+    }
+    &__highlight {
+      font-size: get_vw(12);
+      margin-top: get_vw(5);
+    }
   }
 }
