--- a/src/styles/posts.module.scss
+++ b/src/styles/posts.module.scss
@@ -12,7 +12,7 @@
   background: $white;
   border: 1px solid $black;
   padding: 25px;
-  line-height: 1.3;
+  line-height: 1.5;
   letter-spacing: 0.5px;
   word-wrap: break-word;
   box-sizing: border-box;
@@ -27,6 +27,10 @@
     margin-bottom: 10px;
   }
 
+  section {
+    margin-top: 10px;
+  }
+
   h1 {
     font-size: 1.5rem;
   }
@@ -38,11 +42,12 @@
   }
   p {
     font-size: 1rem;
+    margin-top: 10px;
   }
 
   h2,
   h3 {
-    margin: 15px 0 5px;
+    margin: 10px 0 5px;
   }
 
   iframe {
@@ -51,8 +56,18 @@
     margin-top: 10px;
   }
 
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
   pre {
     overflow-x: scroll;
+    background: $black;
+    padding: 10px;
+    color: $white;
+    box-sizing: border-box;
+    margin-top: 5px;
   }
 
   @include mq-down(md) {
