--- a/src/styles/posts.module.scss
+++ b/src/styles/posts.module.scss
@@ -12,7 +12,8 @@
   background: $white;
   border: 1px solid $black;
   padding: 25px;
-  line-height: 1.5;
+  line-height: 1.7;
+  letter-spacing: 0.5;
   letter-spacing: 0.5px;
   word-wrap: break-word;
   box-sizing: border-box;
@@ -44,8 +45,8 @@
   }
 
   h3 {
-    font-size: 1.2rem;
-    margin-top: 5px;
+    font-weight: bold;
+    margin-top: 8px;
   }
 
   p {
@@ -86,7 +87,10 @@
       margin-top: get_vw(15);
     }
 
-    h3,
+    h3 {
+      margin-top: get_vw(7);
+    }
+
     p {
       margin-top: get_vw(5);
     }
