--add AMP Template

--- a/src/styles/posts.module.scss
+++ b/src/styles/posts.module.scss
@@ -22,8 +22,8 @@
 
   &__img {
     width: 100%;
-    min-height: 250px;
-    background-size: cover;
+    min-height: 300px;
+    background-size: 100%;
     background-position: center;
     margin-bottom: 10px;
   }
